--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@ layout: default
       <a class="blog-logo" href="{{site.url}}{{site.baseurl}}" style="background-image: url('/assets/images/garlic.png')">{{ site.title }}</a>
     {% endif %}
     <h1 class="blog-title">Run To Learn</h1>
-    <h2 class="blog-description">{{ site.description }}</h2>
+    <h2 class="blog-description">Ever tried. Ever failed. Try again. </br> Fail again. Fail better</h2>
     <div class="custom-links">
       {% for social in site.social %}
         {% if social.url %}
